button mobile and desktop fixes

--- a/src/app-components/StudyMode/_studyComponent.scss
+++ b/src/app-components/StudyMode/_studyComponent.scss
@@ -71,13 +71,16 @@
         border: 2px solid orange !important;
         p{
           display: flex;
-    flex-direction: column;
-    align-items: center;
+          flex-direction: column;
+          align-items: center;
+          img{
+            border-radius: 5px;
+            max-width: 70%;
+            user-select: none; 
+            pointer-events: none; 
+          }
         }
-        img{
-          border-radius: 5px;
-          max-width: 70%;
-        }
+
         &:hover {
           background-color: orange !important;
           color: #fff !important;
@@ -107,6 +110,14 @@
         background-color: red !important ;
       }
     } 
+  }
+}
+
+.btn{
+  display: flex;  
+  justify-content: center;
+  button{
+    width: 90%;
   }
 }
 
